<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="ominal"
        app:title="@string/ominal_preferences_title"
        app:summary="@string/ominal_preferences_summary"
        app:fragment="com.ominal.app.fragments.settings.OminalPreferencesFragment"/>

    <Preference
        app:key="ominal_api"
        app:title="@string/ominal_api_preferences_title"
        app:summary="@string/ominal_api_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.ominal.app.fragments.settings.OminalAPIPreferencesFragment"/>

    <Preference
        app:key="ominal_float"
        app:title="@string/ominal_float_preferences_title"
        app:summary="@string/ominal_float_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.ominal.app.fragments.settings.OminalFloatPreferencesFragment"/>

    <Preference
        app:key="ominal_tasker"
        app:title="@string/ominal_tasker_preferences_title"
        app:summary="@string/ominal_tasker_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.ominal.app.fragments.settings.OminalTaskerPreferencesFragment"/>

    <Preference
        app:key="ominal_widget"
        app:title="@string/ominal_widget_preferences_title"
        app:summary="@string/ominal_widget_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.ominal.app.fragments.settings.OminalWidgetPreferencesFragment"/>

    <Preference
        app:key="about"
        app:title="@string/about_preference_title"
        app:persistent="false"/>
    <!-- app:layout="@layout/preference_markdown_text" -->

    <Preference
        app:key="donate"
        app:title="@string/donate_preference_title"
        app:persistent="false"
        app:isPreferenceVisible="false"/>

</PreferenceScreen>
